# virtualDSP

./: .gitignore  CMakeLists.txt  CppDSP.cpp  CppDSP.h  CppRTA.cpp  CppRTA.h  CppRTAtst.cpp  README.md  debug.py  fft.cpp  fft.h  main.cpp  mainwindow.cpp  mainwindow.h  paramWidget.cpp  paramWidget.h
dependencies/portaudio/win32/: portaudio_static_x86.lib  portaudio_x86.exp  portaudio_x86.lib
dependencies/portaudio/win64/: portaudio_static_x64.lib  portaudio_x64.exp  portaudio_x64.lib
